2004-11-28 Axel Simon <A.Simon@kent.ac.uk> 
	
	* gtk/gtk2hs.pkg: Package file for gtk2hs.

	* configure.ac, tools/checkDir.sh: Determine CFLAGS and LDFLAGS
	for each of the libraries, in particular remove directories that
	are already present in Gtk from more derived libraries.

	* Makefile.am, mk/common.mk: Add a new goal for calculating
	dependencies for Haskell files. This new target allows the
	recursive invocation with the name of the library/application for
	which dependencies are generated. This allows for choosing the
	correct CFLAGS for doing pre-processing. Furthermore, fixed the
	installation of a package.

	* mk/applicatoin.mk, config.mk.in, library.mk, recurse.mk: Remove.
	
2004-11-26 Axel Simon <A.Simon@kent.ac.uk> 

	* configure.ac: Changed AC_CONFIG_HEADERS to AM_CONFIG_HEADER.
	
2004-11-26  Jens Petersen  <petersen@haskell.org>

	* Makefile.am (EXTRA_DIST): Include Signal.chs-boot*,
	gtkmarshal.list, hierarchy.list and c2hs_config.h in tarball.

	* configure.ac: Output mk/config.mk.

	* tools/c2hs/toplevel/Main.hs: Fix spelling of finish.

2004-11-21 Axel Simon <A.Simon@kent.ac.uk> 

	* Makefile.am, tools/c2hs/gen/GenBind.hs,
	tools/c2hs/gen/GBMonad.hs: Incorporate the patch so that Ptr,
	ForeignPtr and StablePtr are expanded correctlyl independently of
	whether they are wrapped in a newtype or just synonyms. Fixed
	(hopefully) a bug in c2hs' get hook that didn't cope with
	pointers.

	* Makefile.am, configure.ac: Generating dependencies now involves
	building c2hs on the fly. This is bad for saying make clean on a
	clean tree, but so far I this is the cleanest solution.

	* gtk/*/*.chs.cpp: Renamed all these files to .chs.pp since
	automake otherwise thinks they are C++ sources.

2004-10-28  Axel Simon <A.Simon@kent.ac.uk>

	* mk/mkDepend.in: Undo changes. Dependencies are again where the
	.chs ffiles are.

	* Makefile.am: Fancy dependency generation through makes built-in
	feature of updating files that are -include'd. I had to sacrifice